# kpi_new

./: .gitignore  Dockerfile  README.md  STAT512.example_ANEXA.cd2babfd-5f19-40c1-afed-68693095597e  docker-compose.yaml:Zone.Identifier  fixturesESITI_ANEXA_20241129150337_697263299.txt  fixturesESITI_ANEXA_20241129150346_697262984.txt  fixturesESITI_ANEXA_202411291933_TIP2407090.txt  fixturesESITI_ANEXA_202411291933_TIP2407099.txt  fixturesESITI_ANEXA_20241202102624_697978122.txt  fixturesESITI_ANEXA_20241204091039_699107738.txt  pyproject.toml  tasks.db
.aws/: config
app/: database.py  main.py  models.py  scheduler.py  utils.py
conf/: Conf.json  conf.py  conf_data.py
deprecated/: bordero_xbs_old.py  estado_grub_anex.py  get_token.py  pda_arc_ane_old.py  pda_xbs_ane.py  schedule_cron.py  test_get_token.py
fixtures/: ESITI_ANEXA_202412032324_TIP2407137.txt  ESITI_ANEXA_202412032336_TIP2407100.txt  ESITI_ANEXA_202412041633_TIP2408468.txt  ESITI_ANEXA_202412041635_TIP2408581.txt  ESITI_ANEXA_202412252327_TIP2408469.txt  ESITI_ANEXA_202412252346_TIP2408474.txt  ESITI_ANEXA_202412252346_TIP2408475.txt  ESITI_ANEXA_202412252348_TIP2408477.txt  ESITI_ANEXA_202412252351_TIP2408478.txt  ESITI_ANEXA_202412252351_TIP2408479.txt  ESITI_ANEXA_202412252351_TIP2408549.txt  ESITI_ANEXA_202412252351_TIP2408550.txt  ESITI_ANEXA_202412252351_TIP2408551.txt  ESITI_ANEXA_202412252351_TIP2408552.txt  ESITI_ANEXA_202412252351_TIP2408555.txt  ESITI_ANEXA_202412252351_TIP2408581.txt  ESITI_ANEXA_202412252351_TIP2408584.txt  ESITI_ANEXA_202412252351_TIP2408624.txt  (+49 more)
src/: bmaster_api.py  (+17 more)
(+124 files in other folders)
